--- a/apps/indexer/package.json
+++ b/apps/indexer/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "railway-ponder-frontend-template",
+  "name": "indexer",
   "version": "0.0.1",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "pnpm --filter=* run dev",
+    "dev": "ponder dev",
     "start": "ponder start",
     "db": "ponder db",
     "codegen": "ponder codegen",
     "lint": "biome check --write",
     "lint:check": "biome check",
-    "build": "pnpm --filter=* run build"
+    "build": "tsc"
   },
-  "dependencies": {},
+  "dependencies": {
+    "hono": "^4.5.0",
+    "ponder": "^0.9.28",
+    "viem": "^2.21.3"
+  },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@types/node": "^20.9.0",
     "typescript": "^5.2.2"
-  },
-  "resolutions": {
-    "esbuild": "^0.25.0",
-    "vite": "^5.4.12"
   },
   "engines": {
     "node": ">=18.14"
