Add indexer queries to frontend

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ponder/client": "^0.9.28",
+    "@ponder/react": "^0.9.28",
+    "@tanstack/react-query": "^5.68.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
