--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,5 @@ jobs:
     - name: Run lint check
       run: pnpm lint:check
 
-    - name: Run type check
-      run: pnpm typecheck
+    - name: Build
+      run: pnpm build
