--- a/apps/indexer/package.json
+++ b/apps/indexer/package.json
@@ -8,7 +8,7 @@
     "start": "ponder start",
     "db": "ponder db",
     "codegen": "ponder codegen",
-    "build": "tsc"
+    "build": ""
   },
   "dependencies": {
     "hono": "^4.5.0",
